--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10205,6 +10205,7 @@
     <Content Include="Areas\Facturacion\Views\Proforma\_GridViewPartial_proforma_facturada_det.cshtml" />
     <Content Include="Areas\Inventario\Views\ParametrizacionContableProducto\_GridViewPartial_ParametrizacionContableProducto.cshtml" />
     <Content Include="Areas\Inventario\Views\ParametrizacionContableProducto\Index.cshtml" />
+    <Content Include="Areas\Inventario\Views\ParametrizacionContableProducto\_CmbCuenta.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
