--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -982,6 +982,12 @@
     <Compile Include="Reportes\Facturacion\FAC_001_Rpt.Designer.cs">
       <DependentUpon>FAC_001_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Facturacion\FAC_002_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Facturacion\FAC_002_Rpt.Designer.cs">
+      <DependentUpon>FAC_002_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Facturacion\FAC_003_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -10211,6 +10217,7 @@
     <Content Include="Areas\Inventario\Views\ParametrizacionContableProducto\Index.cshtml" />
     <Content Include="Areas\Inventario\Views\ParametrizacionContableProducto\_CmbCuenta.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_017.cshtml" />
+    <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_002.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
@@ -10564,6 +10571,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Facturacion\FAC_001_Rpt.resx">
       <DependentUpon>FAC_001_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Facturacion\FAC_002_Rpt.resx">
+      <DependentUpon>FAC_002_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Facturacion\FAC_003_Rpt.resx">
       <DependentUpon>FAC_003_Rpt.cs</DependentUpon>
