--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -324,6 +324,7 @@
     <Compile Include="Reportes\Banco\BAN_010_Info.cs" />
     <Compile Include="Reportes\Banco\BAN_011_Info.cs" />
     <Compile Include="Reportes\Banco\BAN_012_Info.cs" />
+    <Compile Include="Reportes\Banco\BAN_013_Info.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_Info.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ingresos_Info.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ValesNoConciliados_Info.cs" />
