--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -664,6 +664,12 @@
     <Compile Include="Reportes\Banco\BAN_012_Rpt.Designer.cs">
       <DependentUpon>BAN_012_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Banco\BAN_013_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Banco\BAN_013_Rpt.Designer.cs">
+      <DependentUpon>BAN_013_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Caja\CAJ_001_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -10227,6 +10233,7 @@
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\_CmbPuntoCargoGrupo_Reportes.cshtml" />
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\_CmbPuntoCargo_Reportes.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_020.cshtml" />
+    <Content Include="Areas\Reportes\Views\BancoReportes\BAN_013.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
@@ -10421,6 +10428,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Banco\BAN_012_Rpt.resx">
       <DependentUpon>BAN_012_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Banco\BAN_013_Rpt.resx">
+      <DependentUpon>BAN_013_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Caja\CAJ_001_Rpt.resx">
       <DependentUpon>CAJ_001_Rpt.cs</DependentUpon>
