--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10234,6 +10234,8 @@
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\_CmbPuntoCargo_Reportes.cshtml" />
     <Content Include="Areas\Reportes\Views\FacturacionReportes\FAC_020.cshtml" />
     <Content Include="Areas\Reportes\Views\BancoReportes\BAN_013.cshtml" />
+    <Content Include="Areas\Facturacion\Views\ClienteTipo\_CmbCuenta_Anticipo.cshtml" />
+    <Content Include="Areas\Facturacion\Views\Cliente\_CmbCuenta_Anticipo.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
