--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -693,6 +693,9 @@
     <Compile Include="fa_notaCreDeb_det.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
+    <Compile Include="fa_notaCreDeb_resumen.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
     <Compile Include="fa_notaCreDeb_x_ct_cbtecble.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
