--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Facturacion\fa_NivelDescuento_Info.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_det_Info.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_Info.cs" />
+    <Compile Include="Facturacion\fa_notaCreDeb_resumen_Info.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_x_fa_factura_NotaDeb_Info.cs" />
     <Compile Include="Facturacion\fa_parametro_Info.cs" />
     <Compile Include="Facturacion\fa_proforma_det_Info.cs" />
