--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1583,6 +1583,9 @@
     <Compile Include="Reportes\Base\VWINV_019.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Base\VWINV_020.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Base\VWPRE_001.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
@@ -1744,6 +1747,7 @@
     <Compile Include="Reportes\Inventario\INV_017_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_018_Data.cs" />
     <Compile Include="Reportes\Inventario\INV_019_Data.cs" />
+    <Compile Include="Reportes\Inventario\INV_020_Data.cs" />
     <Compile Include="Reportes\Presupuesto\PRE_001_Data.cs" />
     <Compile Include="Reportes\Produccion\PRO_001_Data.cs" />
     <Compile Include="Reportes\RRHH\ROL_001_Data.cs" />
