--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -411,6 +411,7 @@
     <Compile Include="Reportes\Inventario\INV_017_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_018_Info.cs" />
     <Compile Include="Reportes\Inventario\INV_019_Info.cs" />
+    <Compile Include="Reportes\Inventario\INV_020_Info.cs" />
     <Compile Include="Reportes\Presupuesto\PRE_001_Info.cs" />
     <Compile Include="Reportes\Produccion\PRO_001_Info.cs" />
     <Compile Include="Reportes\RRHH\ROL_001_Info.cs" />
