--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10263,6 +10263,7 @@
     <Content Include="Areas\Facturacion\Views\GuiaSinPrecios\Modificar.cshtml" />
     <Content Include="Areas\Facturacion\Views\GuiaSinPrecios\Nuevo.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorCobrarReportes\CXC_004.cshtml" />
+    <Content Include="Areas\Reportes\Views\InventarioReportes\INV_019.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
