--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10279,6 +10279,7 @@
     <Content Include="Areas\Facturacion\Views\ClienteContactos\Modificar.cshtml" />
     <Content Include="Areas\Facturacion\Views\ClienteContactos\Anular.cshtml" />
     <Content Include="Areas\Facturacion\Views\ClienteContactos\_CmbCliente.cshtml" />
+    <Content Include="Areas\Contabilidad\Views\PeriodoContable\_GridViewPartial_Cierre_x_Modulo.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
