--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Contabilidad\ct_grupocble_Info.cs" />
     <Compile Include="Contabilidad\ct_parametro_Info.cs" />
     <Compile Include="Contabilidad\ct_periodo_Info.cs" />
+    <Compile Include="Contabilidad\ct_periodo_x_tb_modulo_Info.cs" />
     <Compile Include="Contabilidad\ct_plancta_Info.cs" />
     <Compile Include="Contabilidad\ct_plancta_nivel_Info.cs" />
     <Compile Include="Contabilidad\ct_punto_cargo_grupo_Info.cs" />
