--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -297,6 +297,7 @@
     <Compile Include="Reportes\Banco\BAN_011_Bus.cs" />
     <Compile Include="Reportes\Banco\BAN_012_Bus.cs" />
     <Compile Include="Reportes\Banco\BAN_013_Bus.cs" />
+    <Compile Include="Reportes\Banco\BAN_014_Bus.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_Bus.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ingresos_Bus.cs" />
     <Compile Include="Reportes\Caja\CAJ_002_ValesNoConciliados_Bus.cs" />
