--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -315,6 +315,7 @@
     <Compile Include="Reportes\CuentasPorCobrar\CXC_003_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_004_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_005_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_006_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Diario_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Cobros_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Bus.cs" />
