--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -346,6 +346,7 @@
     <Compile Include="Reportes\CuentasPorCobrar\CXC_003_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_004_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_005_Info.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_006_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Cobros_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Diario_Info.cs" />
