--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -250,6 +250,8 @@
     <Compile Include="Areas\ActivoFijo\Controllers\CategoriaAFController.cs" />
     <Compile Include="Areas\ActivoFijo\Controllers\DepartamentoAFController.cs" />
     <Compile Include="Areas\ActivoFijo\Controllers\DepreciacionAFController.cs" />
+    <Compile Include="Areas\ActivoFijo\Controllers\MarcaController.cs" />
+    <Compile Include="Areas\ActivoFijo\Controllers\ModeloController.cs" />
     <Compile Include="Areas\ActivoFijo\Controllers\ParametroAFController.cs" />
     <Compile Include="Areas\ActivoFijo\Controllers\RevalorizacionActivoController.cs" />
     <Compile Include="Areas\ActivoFijo\Controllers\RetiroActivoController.cs" />
@@ -10300,6 +10302,19 @@
     <Content Include="Areas\Contabilidad\Views\Dinardap\Nuevo.cshtml" />
     <Content Include="Areas\Inventario\Views\Producto\_CmbBodega_det.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorCobrarReportes\CXC_006.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\Modelo\Nuevo.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\Modelo\Index.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\Modelo\_GridViewPartial_modelo_af.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\Modelo\Modificar.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\Modelo\Anular.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\Marca\Nuevo.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\Marca\Modificar.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\Marca\Index.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\Marca\Anular.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\Marca\_GridViewPartial_marca_af.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\ActivoFijo\_GridViewPartial_modeloAF_importacion.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\ActivoFijo\_GridViewPartial_marcaAF_importacion.cshtml" />
+    <Content Include="Areas\ActivoFijo\Views\ActivoFijo\_GridViewPartial_areaAF_importacion.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
