--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Banco\ba_CatalogoTipo_Bus.cs" />
     <Compile Include="Banco\ba_Catalogo_Bus.cs" />
     <Compile Include="Banco\ba_Cbte_Ban_Bus.cs" />
+    <Compile Include="Banco\ba_Cbte_Ban_tipo_Bus.cs" />
     <Compile Include="Banco\ba_Cbte_Ban_tipo_x_ct_CbteCble_tipo_Bus.cs" />
     <Compile Include="Banco\ba_Cbte_Ban_x_ba_TipoFlujo_Bus.cs" />
     <Compile Include="Banco\ba_Conciliacion_Bus.cs" />
