--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Banco\ba_CatalogoTipo_Info.cs" />
     <Compile Include="Banco\ba_Catalogo_Info.cs" />
     <Compile Include="Banco\ba_Cbte_Ban_Info.cs" />
+    <Compile Include="Banco\ba_Cbte_Ban_tipo_Info.cs" />
     <Compile Include="Banco\ba_Cbte_Ban_tipo_x_ct_CbteCble_tipo_Info.cs" />
     <Compile Include="Banco\ba_Cbte_Ban_x_ba_TipoFlujo_Info.cs" />
     <Compile Include="Banco\ba_Conciliacion_det_Info.cs" />
