--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10319,6 +10319,7 @@
     <Content Include="Areas\Banco\Views\ParametroBanco\_GridViewPartial_CbteBan_x_CbteCble.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\ParametroCXC\_CmbCuenta_ProvisionFuente.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\ParametroCXC\_CmbCuenta_ProvisionIva.cshtml" />
+    <Content Include="Areas\Banco\Views\ConciliacionBanco\Abrir.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
